--- a/html/components/ruleset-tab/index.html
+++ b/html/components/ruleset-tab/index.html
@@ -27,7 +27,7 @@
     <div sbForeach="RuleDefinition:: compareChildIndex: part=1, noContext" class="section folded">
       <div class="header" sbCall="triggerFold" sbDisplay="-: sectionName"></div>
       <div
-        sbForeach="RuleDefinition:: compareIndex: filter=^"
+        sbForeach="RuleDefinition:: index: filter=^"
         class="definition"
         sbAttr="index: Index"
         sbClass="Inherited: §.Rule([RuleDefinition]): == null"
