--- a/html/components/sk-sheet/index.html
+++ b/html/components/sk-sheet/index.html
@@ -62,7 +62,7 @@
               <option value="">?</option>
               <option
                 sbContext="t"
-                sbForeach="Skater:: compareRosterNumber: resort=RosterNumber"
+                sbForeach="Skater:: rosterNumber: resort=RosterNumber"
                 sbClass="sbHide: Role: === 'NotInGame'"
                 sbAttr="value: Id | rosterNumber: RosterNumber"
                 sbDisplay="RosterNumber"
@@ -115,7 +115,7 @@
               <option value="">?</option>
               <option
                 sbContext="t"
-                sbForeach="Skater:: compareRosterNumber: resort=RosterNumber"
+                sbForeach="Skater:: rosterNumber: resort=RosterNumber"
                 sbClass="sbHide: Role: === 'NotInGame'"
                 sbAttr="value: Id | rosterNumber: RosterNumber"
                 sbDisplay="RosterNumber"
