--- a/html/views/overlay/index.html
+++ b/html/views/overlay/index.html
@@ -167,7 +167,7 @@
             <div class="Wrapper Team Team1 SortBox">
               <div
                 class="Skater"
-                sbForeach="Skater:: compareRosterNumber: resort=RosterNumber"
+                sbForeach="Skater:: rosterNumber: resort=RosterNumber"
                 sbClass="NoShow: Role: ==='NotInGame'"
                 sbAttr="rosterNumber: RosterNumber"
               >
@@ -197,7 +197,7 @@
             <div class="Wrapper Team Team1 SortBox">
               <div
                 class="Skater"
-                sbForeach="Skater:: compareRosterNumber: resort=RosterNumber"
+                sbForeach="Skater:: rosterNumber: resort=RosterNumber"
                 sbClass="NoShow: Role: ==='NotInGame'"
                 sbAttr="rosterNumber: RosterNumber"
               >
